nuc/manifests/cni/hubble-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui-ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: letsencrypt-prod # Optional, if using cert-manager
spec:
  ingressClassName: nginx # Change if using a different ingress controller
  tls:
    - hosts:
        - hubble.k8s.nullservers.com
      secretName: hubble-ui-tls # Name of the TLS secret for HTTPS
  rules:
    - host: hubble.k8s.nullservers.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
